Text overflow issue on mobile device

--- a/src/sections/1-home-section/Home.scss
+++ b/src/sections/1-home-section/Home.scss
@@ -125,6 +125,9 @@
 
 
 @media screen and (min-width: 600px) and (max-width: 800px){
+  html{
+    overflow-x: hidden;
+  }
   .home-section{
     .para-container{
       #img-1{
@@ -167,6 +170,9 @@
   }
 }
 @media screen and (max-width: 600px){
+  html{
+    overflow-x: hidden;
+  }
   .home-section{
     .para-container{
 
